SandBox-2/force-app/main/default/objects/IMS_Monthly_Stats__c/IMS_Monthly_Stats__c.object-meta.xml
<CustomObject>
    <label>IMS Monthly Stats</label>
    <nameField>
        <displayFormat>MDN-{000000}</displayFormat>
        <label>MDN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMS Monthly Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>