SandBox-2/force-app/main/default/objects/IMS_Monthly_Stats__c/fields/FORM_Monthly_Total_Typhoid_Fever_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>FORM_Monthly_Total_Typhoid_Fever_Vaccine__c</fullName>
    <formula>/* RS_Monthly_Vivotif_Total_Rollup__c  +  FORMULA_Total_Monthly_Typhim_Doses__c */
Monthly_Vivotif_Total_Rollup__c + FORMULA_Total_Monthly_Typhim_Doses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>old_Monthly Total Typhoid Fever Vaccine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>