SandBox-2/force-app/main/default/objects/IMS_Monthly_Stats__c/fields/FORMUA_Monthly_Vivotif_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>FORMUA_Monthly_Vivotif_Market_Share__c</fullName>
    <formula>/*IF(FORM_Monthly_Total_Typhoid_Fever_Vaccine__c  &lt;&gt; 0, (RS_Monthly_Vivotif_Total_Rollup__c /  FORM_Monthly_Total_Typhoid_Fever_Vaccine__c), 0)*/
IF(FORM_Monthly_Total_Typhoid_Fever_Vaccine__c  &lt;&gt; 0, (Monthly_Vivotif_Total_Rollup__c /  FORM_Monthly_Total_Typhoid_Fever_Vaccine__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Vivotif Market Share %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>