SandBox-2/force-app/main/default/objects/IMS_Monthly_Stats__c/fields/Monthly_Typhim_VI_20_Dose_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Typhim_VI_20_Dose_Rollup__c</fullName>
    <label>Monthly Typhim VI 20 Dose Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>