SandBox-2/force-app/main/default/objects/IMS_Monthly_Stats__c/fields/Monthly_Vivotif_Indirect_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Vivotif_Indirect_Rollup__c</fullName>
    <label>Monthly Vivotif Indirect Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>