SandBox-2/force-app/main/default/objects/IMS_Monthly_Stats__c/fields/RS_Monthly_Vivotif_Direct_Rollup__c.field-meta.xml
<CustomField>
    <fullName>RS_Monthly_Vivotif_Direct_Rollup__c</fullName>
    <label>old_Monthly Vivotif Direct Rollup</label>
    <summarizedField>IMS_Product__c.Doses__c</summarizedField>
    <summaryFilterItems>
        <field>IMS_Product__c.Product__c</field>
        <operation>contains</operation>
        <value>VIVOTIF DIRECT</value>
    </summaryFilterItems>
    <summaryForeignKey>IMS_Product__c.IMS_Month_Ref__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>